groups/flowDefinitions/objects/TW1_Brinde__c.object
<CustomObject>
    <fields>
        <fullName>TW1_Descricao__c</fullName>
        <label>Descrição</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TW1_Foto__c</fullName>
        <label>Foto</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>TW1_SGL__c</fullName>
        <label>SGL</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Shopping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shopping</label>
        <referenceTo>TW1_Shopping__c</referenceTo>
        <relationshipLabel>Brindes</relationshipLabel>
        <relationshipName>Brindes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tipo__c</fullName>
        <label>Tipo</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Produto</fullName>
                    <default>true</default>
                    <label>Produto</label>
                </value>
                <value>
                    <fullName>Voucher</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Valor__c</fullName>
        <label>Valor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Brinde</label>
    <nameField>
        <label>Nome do Brinde</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Brindes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>